Update api-documenter to (1) surface information about protected members and (2) fix <p> rendering bug

--- a/build-tests/api-documenter-test/etc/yaml/api-documenter-test.yml
+++ b/build-tests/api-documenter-test/etc/yaml/api-documenter-test.yml
@@ -22,6 +22,7 @@ classes:
   - 'api-documenter-test!DocBaseClass:class'
   - 'api-documenter-test!DocClass1:class'
   - 'api-documenter-test!DocClassInterfaceMerge:class'
+  - 'api-documenter-test!DocClassWithProtectedMembers:class'
   - 'api-documenter-test!Generic:class'
   - 'api-documenter-test!SystemEvent:class'
 enums:
