--- a/build-tests/api-documenter-test/etc/yaml/toc.yml
+++ b/build-tests/api-documenter-test/etc/yaml/toc.yml
@@ -49,6 +49,8 @@ items:
             uid: 'api-documenter-test!DocClassInterfaceMerge:class'
           - name: DocClassInterfaceMerge (Interface)
             uid: 'api-documenter-test!DocClassInterfaceMerge:interface'
+          - name: DocClassWithProtectedMembers
+            uid: 'api-documenter-test!DocClassWithProtectedMembers:class'
           - name: DocEnum
             uid: 'api-documenter-test!DocEnum:enum'
           - name: DocEnumNamespaceMerge (Enum)
